2005-07-23  Christian Kellner  <gicmo@gnome.org>

	* modules/http-neon-method.c: Don't loop ad infinitum when
	authentication fails on GET. Also fix a Typo. 
	Fixes bug #310596. Patch from jylefort@FreeBSD.org.
	
2005-07-18  Sebastien Bacher  <seb128@debian.org>

	* libgnomevfs/gnome-vfs-filesystem-type.c:
	list reiser4, fix the trash issues with it,
	patch by James Lademann <jwlademann@myrealbox.com> (Closes: #153100).

2005-07-18  Alexander Larsson  <alexl@redhat.com>

	* modules/sftp-method.c:
	Handle errors correctly (#304022)
	Patch from Sebastien Bacher

2005-07-15  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Disable cdda method by default.
	We don't recommend that you ship or use this
	module atm.

2005-07-15  William Jon McCann  <mccann@jhu.edu>

	* modules/file-method.c (do_is_local): Add autofs and unknown
	filesystem types to not local list (#310418)

2005-07-15  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-uri.[ch]:
	Handle escaped chars in username/password (#89106)
	Patch from Ryan Lortie

2005-07-14  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-dns-sd.c: (howl_resolve_idle):
	actually pass text parameters for mDNS (#310292)
	Patch from Christian Persch

2005-07-11  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.11.4 ===

2005-07-11  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

2005-07-08  Federico Mena Quintero  <federico@ximian.com>

	* libgnomevfs/gnome-vfs-cancellable-ops.c
	(gnome_vfs_find_directory_cancellable): Canonicalize the near_uri
	unconditionally.  If we are finding a trash directory, we also
	need to look at the real device, not the device on which the
	symlink is stored.  Also, return an error if we cannot
	canonicalize the symlink.

2005-07-08  Paolo Borelli  <pborelli@katamail.com>

	* libgnomevfs/gnome-vfs-xfer.[ch]: add an option to not
	preserve permissions when xfering a file. Bug 309604.
